Ajustando a documentaçao.
